# ring

./: .gitignore  Cargo.toml  README.md  eslint.config.js  package.json
.cargo/: config.toml
.github/: codecov.yml  renovate.json
.github/workflows/: ci.yml  release.yml  rust.yml
crates/jill-cli/: Cargo.toml
crates/jill-cli/src/: main.rs
crates/jill-cli/src/js/: list.rs
crates/jill-js-project/: Cargo.toml
crates/jill-js-project/src/: lib.rs  project.rs  workspace.rs  workspace_glob.rs  workspace_iterator.rs  workspace_searcher.rs  workspace_store.rs
crates/jill-project/: Cargo.toml
crates/jill-project/src/: project.rs  workspace.rs
crates/ring-cli/: Cargo.toml
crates/ring-cli-formatters/: Cargo.toml
crates/ring-cli-formatters/src/: list_formatter.rs
crates/ring-cli/src/: list.rs  main.rs
crates/ring-cli/src/js/: list.rs  mod.rs
crates/ring-cli/src/modules/: list.rs  mod.rs
crates/ring-cli/src/parser/: mod.rs
crates/ring-cli/src/parser/js/: list.rs  mod.rs
crates/ring-cli/src/projects/: current.rs  list.rs  mod.rs  tree.rs
crates/ring-cli/src/workspaces/: current.rs  list.rs  mod.rs
crates/ring-core/: Cargo.toml
crates/ring-core/src/: combined_detector.rs  lib.rs
crates/ring-files/: Cargo.toml
crates/ring-files/src/: lib.rs  manifest_loader.rs  pattern_iterator.rs
crates/ring-formatters/: Cargo.toml
crates/ring-formatters/src/: lib.rs  list_formatter.rs
crates/ring-js/: Cargo.toml
crates/ring-js-project/: Cargo.toml
crates/ring-js-project-parser/: Cargo.toml
crates/ring-js-project-parser/src/: lib.rs
crates/ring-js-project-parser/src/graph/: dependency.rs  mod.rs  project.rs  workspace.rs
crates/ring-js-project-parser/src/manifest/: mod.rs
crates/ring-js-project-parser/src/workspace/: dependency.rs  mod.rs
crates/ring-js-project/src/: lib.rs  package_manager.rs  package_manifest.rs  project.rs  workspace.rs  workspace_searcher.rs  workspace_store.rs
crates/ring-js/src/: constants.rs  lib.rs  lockfile_detector.rs  package_manager.rs  package_manifest.rs  project.rs  project_detector.rs  scope.rs  scope_detector.rs  utils.rs
crates/ring-project/: Cargo.toml
crates/ring-project-graph/: Cargo.toml
crates/ring-project/src/: dependency.rs  lib.rs  project.rs  requirement.rs  store.rs  workspace.rs
crates/ring-rust/: Cargo.toml
crates/ring-rust/src/: cargo_loader.rs  cargo_manifest.rs  constants.rs  crate_manifest.rs  lib.rs  project.rs  project_detector.rs  scope.rs  scope_detector.rs
crates/ring-tag/: Cargo.toml
crates/ring-tag/src/: lib.rs
crates/ring-traits/: Cargo.toml
crates/ring-traits/src/: detect.rs  detector.rs  lib.rs  manifest.rs  module.rs  optional_result.rs  project.rs  project_detector.rs  scope.rs  scope_detector.rs  tagged.rs
crates/ring-utils/: Cargo.toml
crates/ring-utils/src/: dependency.rs  lib.rs  macros.rs  manifest_loader.rs  normalized_path.rs  optional_result.rs  path.rs  path_tree.rs  requirement.rs  searcher.rs  store.rs  tag.rs
npm/: .gitignore
npm/ring/: package.json
npm/ring-linux-amd64/: package.json
npm/ring-macos-amd64/: package.json
npm/ring-macos-arm64/: package.json
npm/ring-windows-amd64/: package.json
scripts/: .swcrc  npm-cli-version.js  npm-native-packages.js  package.json  rollup.config.js
scripts/src/: main.ts  tokens.ts
scripts/src/commands/: build.ts  link.ts  version.ts
scripts/src/middlewares/: logger.middleware.ts
scripts/src/utils/: fs.ts
scripts/templates/: package.tpl.json
