[package]
name = "ring-cli"
version = "0.2.1"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
clap = { version = "4.5.4", features = ["cargo"] }
itertools = "0.13.0"
lscolors = { version = "0.19.0", features = ["owo-colors"] }
owo-colors = "4.0.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

ring-cli-formatters = { path = "../ring-cli-formatters" }
ring-js = { path = "../ring-js" }
ring-rust = { path = "../ring-rust" }
ring-traits = { path = "../ring-traits" }
ring-utils = { path = "../ring-utils" }