[package]
name = "ring-files"
version = "0.2.1"
edition = "2021"

[features]
default = []
glob = ["dep:glob"]

[dependencies]
anyhow = "1.0.86"
dunce = "1.0.5"
glob = { version = "0.3.1", optional = true }
tracing = "0.1.40"

ring-traits = { path = "../ring-traits" }
ring-utils = { path = "../ring-utils" }