[package]
name = "ring-js"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
glob = "0.3.1"
semver = { version = "1.0.23", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tracing = "0.1.40"

ring-traits = { path = "../ring-traits" }
ring-utils = { path = "../ring-utils" }